fix menu on ios' shitty browser

--- a/src/components/_NavBar.scss
+++ b/src/components/_NavBar.scss
@@ -62,6 +62,7 @@ header.navbar {
     margin: 0;
     padding-right: 1em;
     text-transform: uppercase;
+    cursor: pointer;
 
     @include media ($horizontal-bar-mode) {
       display: none;
